--- a/src/MainGUI.form
+++ b/src/MainGUI.form
@@ -236,7 +236,11 @@
       <grid id="44564" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="40"/>
+            <preferred-size width="-1" height="40"/>
+            <maximum-size width="-1" height="40"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -259,7 +263,7 @@
             </constraints>
             <properties>
               <font name="Montserrat Medium" size="20"/>
-              <text value="Avvia il labirinto per iniziare."/>
+              <text value="Benvenuto, crea una nuova partita per iniziare"/>
             </properties>
           </component>
           <hspacer id="ae590">
