--- a/src/MainGUI.form
+++ b/src/MainGUI.form
@@ -281,7 +281,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="ff9c1" class="javax.swing.JSlider" binding="volumeControl">
+          <component id="ff9c1" class="javax.swing.JSlider" binding="volumeSlider">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
